Removing PropertySheet from most of the user facing API.